# DIOPI

impl/: CMakeLists.txt
impl/musa/: CMakeLists.txt  musa_pytorch.h
impl/musa/common/: Context.cpp  Context.h  DeviceThreadHandles.h  Handle.cpp  Handle.h  MUSAHooks.cpp  MUSAHooks.h  MUSAHooksInterface.cpp  MUSAHooksInterface.h  Matmul.hpp  Reduce.hpp  Utils.cpp  Utils.h  common.hpp  musa_lazy_init.cpp
impl/musa/core/: Allocator.cpp  Allocator.h  Device.cpp  Device.h  GuardImpl.cpp  GuardImpl.h  MUSADeviceAssertionHost.cpp  MUSADeviceAssertionHost.h  MUSAException.cpp  MUSAMiscFunctions.cpp  MUSAStream.cpp  MUSAStream.h  MUSA_PORT_Macros.h
impl/musa/functions/: basic_op.cpp
